@@ -341,6 +341,8 @@ OPTIMIZATIONS
 
 BUG FIXES
 
+PIG-1493: Column Pruner throw exception "inconsistent pruning" (daijy)
+
 PIG-1484: BinStorage should support comma seperated path (daijy)
 
 PIG-1443: DefaultTuple underestimate the memory footprint for string (daijy)
